2003/09/06 19:23 rwmcfa1

	* Makefile.PL: dist-rpms build target added

	* perl-Glib.spec.in: initial import

2003/09/05 01:50 muppetman

	* README, debian/changelog: update for 0.97 release

2003/09/05 00:51 muppetman

	* Glib.pm: more pod (too much?  should it be in a separate doc?)

	* t/a.t, Glib.exports, Glib.xs, Makefile.PL, gperl.h, MANIFEST:
	add support for routing g_log messages through perl

2003/09/01 19:52 muppetman

	* Glib.pm: don't set dl_load_flags on darwin, it generates a warning.
	also bump version so that cvs versions of Gtk2 which depend on 
	T_GPERL_GENERIC_WRAPPER will force upgrades.

	* typemap: use a new generic typemap for all the types which follow
	the SvMyType/newSVMyType naming convention.

2003/08/28 23:30 muppetman

	* gperl.h, GClosure.xs, Glib.xs: merged changes from the exceptions
	branch.  gtk2-perl now attempts to do reasonable handling of 
	exceptions in callbacks.  still needs pod for the perl-level stuff,
	but i'm not sure where to put it.

	* Glib.exports: new exportable symbols

	* GParamSpec.xs: hush uninitialized value warning (drop in the bucket)

	* Glib.pm, MANIFEST, README, debian/changelog: update for 0.96 release

2003/08/28 17:45 muppetman

	* GSignal.xs: clean up comments, bind signal_handler_is_connected

2003/08/22 01:11 muppetman

	* Glib.pm, README, META.yml, debian/changelog, MANIFEST:
	prep for 0.95 release

2003/08/19 21:11 rwmcfa1

	* Makefile.PL: added realclean removal of build dir to postamble 
	section.

2003/08/18 23:45 muppetman

	* t/7.t: test out signal stuff on a subclassed object.

2003/08/18 17:28 muppetman

	* GSignal.xs: quiet down remember_closure and forget_closure, now
	that i'm sure they work.

2003/08/16 20:53 muppetman

	* GSignal.xs: implemented wrappers for g_signal_handlers_block_by_func,
	unblock_by_func, and disconnect_by_func.  code for the _matched
	versions of these functions (the generic ones) is commented out, 
	because there is no typemap for GSignalMatchType.
