@@ -1,5 +1,8 @@
 print "1..6\n";
 
+use strict;
+use warnings;
+
 use Glib;
 
 print "ok 1\n";
@@ -9,6 +12,8 @@ print "ok 1\n";
 # virtual overrides, there's no reason to do this rather than
 # just re-blessing the object, so this is a rather contrived
 # example.
+
+my ($ok1, $ok2);
 
 sub Foo::INIT_INSTANCE {
    print "ok $ok1\n";
