@@ -1,6 +1,7 @@
 #!env perl -w
 
 use strict;
+use warnings;
 use Test::More tests => 8;
 use Glib;
 
